# AI-Agent-Orchestration-HW1

./: README.md
.claude/: settings.local.json
App-to-convert-to-python/: README.md  metadata.json
DOCS/: INSTRUCTIONS.md  LSTM.md  PLAN.md  PRD.md  PRD_LSTM.md  PRD_RNN.md  Project_Description.md  Prompt_Log.md  REPORT.md  (+2 more)
fourier-neural-decoder/: .env-example  .gitignore  README.md  pyproject.toml
fourier-neural-decoder/config/: app_config.json  rate_limits.json  training_config.json
fourier-neural-decoder/notebooks/: analysis.ipynb
fourier-neural-decoder/src/fourier/: __main__.py  gatekeeper.py
fourier-neural-decoder/src/fourier/sdk/: lstm_classifier.py  result_comparator.py  rnn_classifier.py  signal_generator.py  window_extractor.py
fourier-neural-decoder/src/fourier/services/: train_models.py
fourier-neural-decoder/src/fourier/shared/: config_loader.py  constants.py  types.py
fourier-neural-decoder/src/fourier/ui/: app.py  callbacks_client.py  callbacks_identify.py  callbacks_result.py  callbacks_server.py  layout.py
fourier-neural-decoder/tests/integration/: test_full_identify_flow.py  test_system.py  test_ui_callbacks.py
fourier-neural-decoder/tests/unit/: test_app.py  test_callbacks_client.py  test_callbacks_identify.py  test_callbacks_server.py  test_config_loader.py  test_gatekeeper.py  test_layout.py  test_lstm_classifier.py  test_main.py  test_result_comparator.py  test_rnn_classifier.py  test_shared_constants.py  test_shared_types.py  test_shared_version.py  test_signal_generator.py  test_training_service.py  test_window_extractor.py
(+4 files in other folders)
