[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fourier"]

[project]
name = "fourier-neural-decoder"
version = "1.0.0"
description = "Interactive Fourier synthesis and ML-powered signal identification app"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dash>=2.17.0",
    "plotly>=5.20.0",
    "numpy>=1.24.0",
    "torch>=2.0.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
fourier-app = "fourier.__main__:main"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short"

[tool.coverage.run]
source = ["src/fourier"]
omit = ["*/tests/*"]

[tool.coverage.report]
fail_under = 85
